--- a/src/project_name/locale/de/LC_MESSAGES/django.po
+++ b/src/project_name/locale/de/LC_MESSAGES/django.po
@@ -6,58 +6,68 @@
 #, fuzzy
 msgid ""
 msgstr ""
-"Project-Id-Version: PACKAGE VERSION\n"
-"Report-Msgid-Bugs-To: \n"
-"POT-Creation-Date: 2021-11-23 18:59+0100\n"
+"Project-Id-Version: {{ project_name }} 1.0.0\n"
+"POT-Creation-Date: 2021-11-25 20:00+0100\n"
 "PO-Revision-Date: YEAR-MO-DA HO:MI+ZONE\n"
-"Last-Translator: FULL NAME <EMAIL@ADDRESS>\n"
-"Language-Team: LANGUAGE <LL@li.org>\n"
+"Last-Translator: Stefan Reinhard <stefan.reinhard@bitforge.ch>\n"
 "Language: \n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
 "Plural-Forms: nplurals=2; plural=(n != 1);\n"
 
-#: src/api/apps.py:8
-msgid "API"
-msgstr ""
+#: src/account/admin.py:17
+msgid "# of Users"
+msgstr "# an User"
 
-#: src/app/admin.py:20
+#: src/account/admin.py:31
 msgid "Personal info"
-msgstr ""
+msgstr "Persönliches"
 
-#: src/app/admin.py:23 src/app/admin.py:43
+#: src/account/admin.py:34 src/account/admin.py:54
 msgid "Permissions"
-msgstr ""
+msgstr "Berechtigungen"
 
-#: src/app/admin.py:26
+#: src/account/admin.py:37
 msgid "Important dates"
-msgstr ""
+msgstr "Wichtige Daten"
 
-#: src/app/apps.py:10
-msgid "New App Name"
-msgstr ""
+#: src/account/apps.py:8
+msgid "Accounts & Permissions"
+msgstr "Accounts & Berechtigungen"
 
-#: src/app/managers.py:15
+#: src/account/managers.py:15 src/mobyz/managers.py:15
 msgid "The email address must be set"
-msgstr ""
+msgstr "Die E-Mail-Adresse muss festgelegt werden"
 
-#: src/app/managers.py:31
+#: src/account/managers.py:31 src/mobyz/managers.py:31
 msgid "Superuser must have is_staff=True."
 msgstr ""
 
-#: src/app/managers.py:33
+#: src/account/managers.py:33 src/mobyz/managers.py:33
 msgid "Superuser must have is_superuser=True."
-msgstr ""
+msgstr "Superuser muss is_staff=True besitzen."
 
-#: src/app/models.py:16
+#: src/account/models.py:16
 msgid "email address"
-msgstr ""
+msgstr "Email Adresse"
 
-#: src/app/models.py:24
+#: src/account/models.py:24
 msgid "User"
-msgstr ""
+msgstr "Benutzer"
 
-#: src/app/models.py:25
+#: src/account/models.py:25
 msgid "Users"
-msgstr ""
+msgstr "Benutzer"
+
+#: src/account/views.py:115
+msgid "Password reset e-mail has been sent."
+msgstr "Password Reset E-Mail wurde versendet."
+
+#: src/account/views.py:135
+msgid "Password has been reset with the new password."
+msgstr "Passwort wurde erfolgreich auf das neue Passwort gesetzt."
+
+#: src/mobyz/templates/admin/login.html:20
+msgid "Sign in with Google"
+msgstr "Mit Google anmelden"
